Added BY-SA license

--- a/slides.tex
+++ b/slides.tex
@@ -40,6 +40,8 @@
 % Titlepage
 %--------------------------------------------------------------------------
 
+\licenseframe{github.com/severin-lemaignan/lecture-rgbd-cameras-hri}
+
 \maketitle
 
 \section*{Overview}
